<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home_text" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/youtube_icon"
            android:title="@string/youtube_text" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorites_icon"
            android:title="@string/fav_text" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search_text" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/sign_out_icon"
            android:title="@string/sign_out_text" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
