<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a450team3.tacoma.uw.edu.sylph.LoginActivity"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/g_top_margin"
            android:contentDescription="@string/desc_google_icon"
            android:src="@drawable/user_default" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2">


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="gone" />


        <Button
            android:text="@string/youtube_player_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/fab"
            android:layout_toRightOf="@+id/sign_in_button"
            android:layout_toEndOf="@+id/sign_in_button"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_gravity="bottom|left"
            android:id="@+id/to_player_button"
            android:onClick="onClick"
            android:visibility="visible"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:visibility="visible"
            tools:visibility="gone"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/favorites_icon"
            android:layout_marginRight="59dp"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="59dp"
            />



    </RelativeLayout>

</LinearLayout>